# server/dataservice/openapi/greenhouseApi.yaml
@@ -10,15 +10,8 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
-  x-ibm-annotations: "true"
-  x-ibm-application-name: GreenhouseNTC
-  x-ibm-application-id: GreenhouseNTC
-  x-ibm-skill-type: imported
-  x-ibm-application-icon: <svg width="512px" height="512px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path fill="#000" d="M173.015 22.936L23 188.546V489h466V188.844L356.326 23c-61.101-.336-122.211.492-183.31-.064zM196.207 41h71.467l113.601 142h-57.267zm94.52 0h56.947l113.601 142h-56.95zM176 45.455l135 149.998V471H41V195.453zm46.676 104.662c-28.028 1.213-50.09 13.314-66.613 29.309-19.1 18.49-30.514 42.355-33.84 59.283-7.239 36.843 9.808 61.862 31.07 70.447.02-.202.049-.176.002-.24-7.507-38.847 4.114-75.91 28.72-100.455-18.585 28.567-20.994 70.834-9.7 103.953a38.802 38.802 0 0 0 13.834-3.451c10.316-4.728 19.615-14.342 25.414-30.531 6.178-17.248.883-45.042-1.242-71.45-1.062-13.203-1.264-26.148 1.892-37.703 1.944-7.113 5.327-13.7 10.463-19.162zM329 201h62v110h-62zm80 0h62v110h-62zM78.174 243.512c-15.848 17.804-21.765 38.434-22.088 58.12-.38 23.193 7.323 44.995 15.678 57.44 18.033 26.86 43.723 31.7 61.941 24.3-28.494-19.45-44.12-49.495-44.082-79.847 6.147 29.067 30.586 56.61 57.916 70.24a33.509 33.509 0 0 0 6.424-10.67c3.408-9.175 3.24-20.71-3.149-34.238-6.745-14.28-27.202-28.267-44.939-43.365-8.869-7.55-17.058-15.495-22.326-24.726-3.013-5.281-4.947-11.098-5.375-17.254zm216.205 37.386c-3.45 5.122-8.026 9.207-13.28 12.276-9.176 5.36-20.237 8.138-31.69 10.24-22.91 4.206-47.61 6.085-60.589 15.076-12.295 8.52-18.226 18.434-19.861 28.084a33.488 33.488 0 0 0 .238 12.45c30.484 1.864 65.412-9.769 85.268-31.868-15.136 26.304-43.686 44.509-78.08 47.104 12.078 15.52 36.73 24.18 65.771 9.937 13.456-6.598 31.037-21.629 42.301-41.902 9.562-17.212 14.747-38.051 9.922-61.397zM329 329h62v142h-62zm80 0h62v142h-62zm-257.033 58.621c-3.298 23.051 5.13 45.02 5.135 61.172l18-.006c-.006-21.306-7.68-42.102-5.317-58.615-4.348-6.181-9.231-7.098-17.818-2.55z"/></svg>
 servers:
-  - url: https://bs1lhv1m-3000.uks1.devtunnels.ms/
-security:
-- basic_auth: []  
+  - url: http://localhost:3000/
 tags:
   - name: Sensor
     description: Sensor data endpoints
@@ -70,110 +63,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /light:
-    post:
-      tags:
-        - Light
-      summary: Set light
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-               $ref: '#/components/schemas/LightConfig'    
-      responses:
-        '200':
-          description: Configuration updated
-        '500':
-          description: Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'       
-  /heat:
-    post:
-      tags:
-        - Heat
-      summary: Set heating
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-               $ref: '#/components/schemas/HeatConfig'    
-      responses:
-        '200':
-          description: Configuration updated
-        '500':
-          description: Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'              
-  /cool:
-    post:
-      tags:
-        - Cool
-      summary: Set cooling
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-               $ref: '#/components/schemas/CoolConfig'    
-      responses:
-        '200':
-          description: Configuration updated
-        '500':
-          description: Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'                  
-  /irrigation:
-    post:
-      tags:
-        - Irrigation
-      summary: Set irrigation
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-               $ref: '#/components/schemas/IrrigationConfig'    
-      responses:
-        '200':
-          description: Configuration updated
-        '500':
-          description: Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'                  
   /config:
     post:
       tags:
@@ -194,6 +83,10 @@ paths:
       responses:
         '200':
           description: Configuration updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ConfigResponse'
         '500':
           description: Error
           content:
@@ -336,49 +229,11 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/SensorLog'
-    LightConfig:
-      type: object
-      properties:
-        lightState:
-          $ref: '#/components/schemas/OnOffState'
-        lightOnHH:
-          type: integer
-        lightOffHH:
-          type: integer          
-    HeatConfig:
-      type: object
-      properties:
-        heaterState:
-          $ref: '#/components/schemas/OnOffState'
-        minTemp:
-          type: integer
-    CoolConfig:
-      type: object
-      properties:
-        fanState:
-          $ref: '#/components/schemas/OnOffState'
-        windowState:
-          $ref: '#/components/schemas/WindowState'          
-        maxTemp:
-          type: integer          
-    IrrigationConfig:
-      type: object
-      properties:
-        pumpState:
-          $ref: '#/components/schemas/OnOffState'
-        wateringDuration:
-          type: integer               
-        timeHH1:
-          type: integer        
-        timeHH2:
-          type: integer  
-        timeHH3:
-          type: integer            
     ConfigRequest:
       type: object
       properties:
         lightState:
-          $ref: '#/components/schemas/OnOffState'
+          type: string
         lightOnOff:
           type: array
           items:
@@ -386,11 +241,11 @@ components:
           minItems: 2
           maxItems: 2
         pumpState:
-          $ref: '#/components/schemas/OnOffState'
+          type: string
         fanState:
-          $ref: '#/components/schemas/OnOffState'
+          type: string
         heaterState:
-          $ref: '#/components/schemas/OnOffState'
+          type: string
         wateringDuration:
           type: number
         wateringTimes:
@@ -400,7 +255,7 @@ components:
           minItems: 3
           maxItems: 3
         windowState:
-          $ref: '#/components/schemas/WindowState'
+          type: boolean
         temperatureRange:
           type: array
           items:
@@ -442,20 +297,4 @@ components:
       type: object
       properties:
         error:
-          type: string
-    OnOffState:
-      type: string
-      enum:
-        - ON
-        - OFF
-        - AUTO
-    WindowState:
-      type: string
-      enum:
-        - OPEN
-        - CLOSED
-        - AUTO     
-  securitySchemes:
-    basic_auth:
-      type: http
-      scheme: basic             
+          type: string 
